# upnp-bridge

./: Cargo.toml  README.md  build.rs
src/: client.rs  main.rs  server.rs  ssdp.rs
src/grpc/: client.rs  mod.rs  server.rs  upnp.rs
src/proto/: upnp-bridge.proto
