[package]
name = "upnp-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
default-net = "0.14.1"
futures = "0.3.28"
httparse = "1.8.0"
prost = "0.11.9"
socket2 = "0.5.3"
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.9"

[build-dependencies]
tonic-build = "0.9"
