[package]
name = "upnp-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
console-subscriber = "0.1.9"
default-net = "0.14.1"
env_logger = "0.10.0"
futures = "0.3.28"
httparse = "1.8.0"
log = "0.4.17"
prost = "0.11.9"
socket2 = "0.5.3"
tokio = { version = "1.28.1", features = ["full", "tracing"] }
tokio-stream = "0.1.14"
tonic = "0.9"

[build-dependencies]
tonic-build = "0.9"
